# webassembly-playground

./: .gitignore  CMakeLists.txt  README.md  webassembly-playground.code-workspace
cmake/: DummycppprojectConfig.cmake.in
consumer_cpp/: CMakeLists.txt  README.md
consumer_cpp/src/: main.cpp
consumers/: README.md
consumers/cpp/: CMakeLists.txt  README.md
consumers/cpp/src/: main.cpp
consumers/js/: README.md  package.json  webpack.config.js
consumers/js/src/: index.html  index.js  index.ts
dummy-cpp-library/: CMakeLists.txt  README.md
dummy-cpp-library/include/dummy-cpp-project/: stuff.h
dummy-cpp-library/src/: CMakeLists.txt  stuff.cpp
dummy-library-cpp/: CMakeLists.txt  README.md
dummy-library-cpp/cmake/: DummyConfig.cmake.in
dummy-library-cpp/include/dummy/: stuff.h
dummy-library-cpp/src/: CMakeLists.txt  stuff.cpp
dummy-library-js/: .gitignore  CMakeLists.txt  Makefile  Makefile.old  README.md  package.json  tsconfig.json
dummy-library-js/src/: README.md  dummy-js.cpp  index.js  index.ts
dummy-library-js/src/@types/assets/: index.d.ts
dummy-library-js/src/c++/: dummy-wrapper.cpp
dummy-library-js/src/ts/: exported-wasm-module.ts
experiments/: README.md
experiments/bare-clang/: Makefile  README.md
experiments/bare-clang/src/: bindings.cpp  index.html
experiments/bare-hands/: Makefile  README.md
experiments/bare-hands/src/: factorial.js  factorial.wat  factorial_s-expressions.wat
experiments/basic-emscripten/: Makefile  README.md
experiments/basic-emscripten/src/: index.html  module.cpp
experiments/embind-emscripten/: Makefile  README.md
experiments/embind-emscripten/src/: bindings.cpp  index.html  mymodule.js
experiments/ex1/: Makefile  README.md  package.json
experiments/ex1/src/: bindings.cpp  index.html  mymodule.js
experiments/ex2/: Makefile  README.md
experiments/ex2/src/: index.html  mymodule.js
experiments/ex3/: README.md  serve-all.sh
experiments/ex3/src/: index.html  post-js.js  pre-js.js
experiments/no-emscripten/: Makefile  README.md  serve-default.sh
experiments/no-emscripten/src/: index.html  main.cpp
src/: CMakeLists.txt  stuff.cpp
